docs(security): correct standalone-use claims and add threat-model notes
NormalizationStage documented two throws the code does not perform. The
example claimed /api/../../etc/passwd raises DIRECTORY_ESCAPE_ATTEMPT; it does
not - the leading slash prevents SINGLE_COMPONENT_TRAVERSAL_PATTERN from
matching, no encoded or multi-dot pattern fires, processPathSegment discards
.. at root for an absolute path, escapesRoot("/etc/passwd") is false, and the
method returns /etc/passwd. NormalizationStageTest already asserts exactly
this. The excessive-nesting example was false the same way: that input has ~41
segments and depth 1, so it normalizes to /t without throwing.

Both are replaced with examples that do throw (api/../admin ->
PATH_TRAVERSAL_DETECTED, ../etc/passwd -> DIRECTORY_ESCAPE_ATTEMPT, and a
genuine >100-segment path -> EXCESSIVE_NESTING), plus a two-part statement of
what the stage rejects (LAYER 1's four pattern classes, LAYER 2's surviving-..
check, escapesRoot) and what it silently clamps. The standalone caveat is
scoped to the clamping path: a successful return is not proof the input
carried no traversal intent, so the clamped result must still be authorized
against the caller's own root. It does NOT claim the stage rejects no
traversal.

Threat-model notes added where a deliberate allowance carries residual risk:

- HttpSecurityValidator: when() and identity() are intentional fail-open
  combinators. A misapplied predicate or a stray identity() silently disables
  validation for that path - no exception, no event, no log - and is
  indistinguishable from a validator that ran and found nothing.
- DecodingStage: decoded CR/LF is deliberately allowed for PARAMETER_VALUE and
  BODY because they carry form data, so response-splitting safety depends on
  the application not reflecting those values into response headers. Anchored
  to decodedControlCharacterForbidden, where the carve-out is expressed.
- PatternMatchingStage: traversal detection is duplicated acro